# chatgpt-line-bot

./: .gitignore  README.Arabic.md  README.French.md  README.md  README.zh-CN.md  README.zh-TW.md  config.py  main.py  pyproject.toml
.github/workflows/: translate.yml
chatgpt_linebot/: __init__.py  memory.py  urls.py  urls2.py
chatgpt_linebot/modules/: __init__.py  business_channel.py  chat.py  gpt.py  horoscope.py  image_crawler.py  image_generate.py  youtube_recommend.py
chatgpt_linebot/prompts/: __init__.py  template.py
data/: cws_channel.txt  favorite_videos.json
